# codas-hep

./: README.md  test.txt
CoDaS-HEP-GPU-2026/01/: Session1.ipynb  add-error-handling  double-elements  first-parallel  grid-stride-double  hello-gpu  matrix-multiply-2d  mismatched-config-loop  multi-block-loop  single-block-loop  thread-and-block-idx  vector-add
CoDaS-HEP-GPU-2026/01/03-indices/: 01-thread-and-block-idx.cu
CoDaS-HEP-GPU-2026/01/04-loops/: 01-single-block-loop.cu  02-multi-block-loop.cu
CoDaS-HEP-GPU-2026/01/05-allocate/: 01-double-elements.cu  02-mismatched-config-loop.cu  03-grid-stride-double.cu
CoDaS-HEP-GPU-2026/01/06-errors/: 01-add-error-handling.cu
CoDaS-HEP-GPU-2026/01/07-vector-add/: 01-vector-add.cu
CoDaS-HEP-GPU-2026/01/08-matrix-multiply/: 01-matrix-multiply-2d.cu
CoDaS-HEP-GPU-2026/01/ai-workbook/: problem.ipynb
CoDaS-HEP-GPU-2026/02/: Session2_advanced.ipynb
CoDaS-HEP-GPU-2026/02/01-vector-add/solutions/: 01-vector-add-prefetch-solution.cu
CoDaS-HEP-GPU-2026/03/09-nbody/: files.h  timer.h
CoDaS-HEP-GPU-2026/04/data/: Mudemo.root  README.md
CoDaS-HEP-GPU-2026/06/: gpu_dd4hep_tilecal.ipynb
CoDaS-HEP-GPU-2026/07/gpu-demo/: README.md  main.cu  mock_dependencies.h
CoDaS-HEP-GPU-2026/09/edit/: cpu_ray_tracer_baseline.py  gpu_ray_tracer_numba.py
CoDaS-HEP-GPU-2026/09/edit/optix_minimal/: CMakeLists.txt  minimal_optix7_outline.cu
scientific-python/: 4-scipy-basics.ipynb  5-scikit-hep-basics.ipynb
